--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,20 +8,30 @@
     "web": "npx expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~52.0.0",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.76.6",
     "react-native-auth0": "^3.0.0",
+    "react-native-dotenv": "^3.4.9",
     "react-native-web": "~0.19.10",
-    "firebase": "^10.8.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "react-native-dotenv": "^3.4.9"
+    "expo-secure-store": "~12.8.1",
+    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-template-literals": "^7.23.3",
+    "@babel/plugin-transform-export-namespace-from": "^7.23.4",
+    "@babel/runtime": "^7.20.0",
     "@react-native-community/cli-platform-ios": "^13.0.0"
   },
   "private": true,
