--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.0",
     "expo-location": "~18.0.5",
     "expo-secure-store": "~12.8.1",
