--- a/frontend/app.json
+++ b/frontend/app.json
@@ -46,7 +46,8 @@
         "NSLocationAlwaysAndWhenInUseUsageDescription": "ReassurED needs your location to find nearby hospitals and provide accurate wait times.",
         "NSLocationAlwaysUsageDescription": "ReassurED needs your location to find nearby hospitals and provide accurate wait times.",
         "NSLocationUsageDescription": "ReassurED needs your location to find nearby hospitals and provide accurate wait times."
-      }
+      },
+      "appleTeamId": "G26R3SP5BN"
     },
     "android": {
       "adaptiveIcon": {
@@ -57,7 +58,9 @@
       "permissions": [
         "ACCESS_COARSE_LOCATION",
         "ACCESS_FINE_LOCATION",
-        "ACCESS_BACKGROUND_LOCATION"
+        "ACCESS_BACKGROUND_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
       ],
       "config": {
         "googleMaps": {
